--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <!-- Rimix Icon CND  -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 
-    <!-- <i class="ri-arrow-right-up-line"></i> -->
-    <!-- <i class="ri-search-line"></i> -->
-    <!-- <i class="ri-shopping-cart-2-line"></i> -->
-
     <!-- DaisyUi and Tailwind CND  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -23,55 +19,106 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
-    <!-- font-family: "Manrope", sans-serif; -->
+
+
+
+    <!-- style  -->
+
+    <style>
+        .manrope {
+            font-family: "Manrope", sans-serif;
+
+        }
+    </style>
+
+    <!-- scripts -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        prime: '#ABEF5F',
+                    }
+                }
+            }
+        }
+    </script>
+
+
+
+
 
 
 </head>
 
-<body>
+<body class="manrope">
 
-    <header class=" w-11/12 mx-auto">
+    <header class="w-11/12 mx-auto">
 
         <nav>
 
-
-
             <div class="navbar bg-base-100">
-                <div class="navbar-start">
+                <div class="navbar-start space-x-2">
 
-                    <a class="btn btn-ghost text-xl">daisyUI</a>
+                    <div class="">
+                        <i class="ri-arrow-right-up-line bg-prime rounded-full p-2 text-xl"></i>
+                    </div>
+                    <a class="text-4xl font-extrabold">Rinterio</a>
+
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
-                        <li><a>Item 1</a></li>
-                        <li>
-                            <details>
-                                <summary>Parent</summary>
-                                <ul class="p-2">
-                                    <li><a>Submenu 1</a></li>
-                                    <li><a>Submenu 2</a></li>
-                                </ul>
-                            </details>
-                        </li>
-                        <li><a>Item 3</a></li>
+                    <ul class="menu menu-horizontal px-1 text-[16px] font-normal ">
+                        <li class="hover:font-extrabold"><a>Home</a></li>
+                        <li class="hover:font-extrabold"><a>Services</a></li>
+                        <li class="hover:font-extrabold"><a>Portfolio</a></li>
+                        <li class="hover:font-extrabold"><a>Blogs</a></li>
+                        <li class="hover:font-extrabold"><a>Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end">
-                    <a class="btn">Button</a>
+                <div class="navbar-end space-x-4">
+
+
+                    <div class=" space-x-1 xl:space-x-4 hidden md:flex">
+
+
+                        <div class="flex justify-center items-center gap-1 xl:gap-4">
+                            <div> <i class="ri-search-line bg-[#FFFFFF] border-2 text-xl p-3  rounded-full"></i></div>
+
+                            <div> <i class="ri-shopping-cart-2-line bg-[#FFFFFF] border-2 text-xl p-3 rounded-full"></i>
+                            </div>
+
+                        </div>
+
+
+                        <button class="btn btn-active rounded-3xl bg-prime text-xl font-extrabold">Book Consult
+
+                            <div>
+                                <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
+                            </div>
+
+
+
+
+                        </button>
+
+
+
+                    </div>
+
+
+
                     <!-- here  -->
                     <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h8m-8 6h16" />
-                            </svg>
+                        <div tabindex="0" role="button" class="lg:hidden">
+                            <i class="ri-menu-line text-xl border-2 p-3 rounded-full"></i>
                         </div>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 p-2 shadow">
-                            <li><a>Item 1</a></li>
 
-                            <li><a>Item 3</a></li>
+                        <ul tabindex="0" class="dropdown-content bg-base-100 rounded-box z-[1] mt-3 shadow">
+                            <li><a>Home</a></li>
+                            <li><a>Services</a></li>
+                            <li><a>Portfolio</a></li>
+                            <li><a>Blogs</a></li>
+                            <li><a>Contact</a></li>
                         </ul>
                     </div>
 
