--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 
 </head>
 
-<body class="manrope">
+<body class="manrope h-[100rem]">
 
     <header class="w-11/12 mx-auto">
 
-        <nav>
+        <!--navbar  -->
+
+        <nav class="pt-2">
 
             <div class="navbar bg-base-100">
                 <div class="navbar-start space-x-2">
@@ -96,9 +98,6 @@
                                 <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
                             </div>
 
-
-
-
                         </button>
 
 
@@ -127,6 +126,55 @@
             </div>
 
         </nav>
+
+
+        <!-- navbar end -->
+
+
+
+
+        <!-- banner section  -->
+
+        <section>
+
+            <!-- image div -->
+            <div>
+
+                <img class="mx-auto" src="./assets/banner.png" alt="">
+            </div>
+            <!-- content div -->
+            <div class="text-center space-y-5">
+                <h1 class="text-2xl md:text-4xl lg:text-6xl font-black sm:w-10/12 mx-auto">A barn
+                    house
+                    of this
+                    design
+                    has a striking appearance</h1>
+                <p class="text-[14px] md:text-[16px] font-medium mx-auto md:w-8/12">The barn house captivates with its
+                    blend of
+                    rustic
+                    charm and
+                    modern
+                    sophistication, featuring
+                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <button
+                    class="btn btn-active font-bold text-xl w-full md:w-[250px] rounded-3xl bg-[#ABEF5F80] text-xl font-extrabold">View
+                    Details
+
+                    <div>
+                        <i class="ri-arrow-right-up-line bg-prime text-black rounded-full p-2 text-xl"></i>
+                    </div>
+
+                </button>
+
+
+
+
+
+            </div>
+
+
+
+        </section>
 
 
 
