--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <body class="manrope h-[100rem]">
 
+    <!-- header  -->
     <header class="w-11/12 mx-auto">
 
         <!--navbar  -->
@@ -143,7 +144,7 @@
                 <img class="mx-auto" src="./assets/banner.png" alt="">
             </div>
             <!-- content div -->
-            <div class="text-center space-y-5">
+            <div class="text-center space-y-5 mb-10 md:mb-16 xl:mb-24">
                 <h1 class="text-2xl md:text-4xl lg:text-6xl font-black sm:w-10/12 mx-auto">A barn
                     house
                     of this
@@ -176,6 +177,9 @@
 
         </section>
 
+        <!-- banner section end -->
+
+
 
 
 
@@ -185,6 +189,99 @@
 
 
     </header>
+
+    <!-- main  -->
+    <main class="bg-[#F4F4F4]">
+
+        <!-- We design thoughtful, liveable spaces section  -->
+        <section class="w-11/12 mx-auto">
+
+            <!-- background img div  -->
+            <div>
+                <img class="-ml-12 hidden lg:flex pt-3" src="./assets/Vector.png" alt="">
+            </div>
+
+
+            <!-- contents div  -->
+
+            <div class="card lg:card-side mt-5">
+
+                <div class="space-y-7">
+
+                    <div class="text-center lg:text-start space-y-5 mt-6 lg:mt-0">
+                        <p class="font-bold text-[16px] inline px-4 py-2 bg-white rounded-3xl"> <i
+                                class="ri-arrow-right-fill"></i>About Us</p>
+                        <h2 class="font-bold text-2xl md:text-3xl lg:text-4xl">We design thoughtful,<br> liveable spaces
+                        </h2>
+                        <p class="text-[14px] md:text-[16px] font-medium w-2/3 mx-auto lg:mx-0">The barn house
+                            captivates
+                            with
+                            its blend
+                            of
+                            rustic
+                            charm and
+                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+
+
+
+                    <div class="md:flex lg:flex-col gap-5 space-y-5 md:space-y-0">
+
+                        <!-- one -->
+                        <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 lg:justify-center lg:items-center gap-2 ">
+                            <div>
+                                <img src="./assets/commercial.png" alt="">
+                            </div>
+
+                            <div>
+                                <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
+                                <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic
+                                    charm and modern.</p>
+                            </div>
+                        </div>
+
+                        <!-- two -->
+                        <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 mt-10 lg:items-center lg:justify-center gap-2 ">
+                            <div>
+                                <img src="./assets/residential.png" alt="">
+                            </div>
+
+                            <div>
+                                <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
+                                <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic
+                                    charm and modern.</p>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+
+                </div>
+                <figure
+                    class="mt-5 lg:mt-0 xl:mb-16 xl:h-[504px] rounded-2xl xl:w-[573px] h-56 md:h-96 object-cover object-center ">
+                    <img class="xl:h-full w-full rounded-2xl xl:w-full" src="./assets/Rectangle.png" alt="Album" />
+                </figure>
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+        </section>
+
+    </main>
+
+
 
 </body>
 
