--- a/index.html
+++ b/index.html
@@ -191,93 +191,202 @@
     </header>
 
     <!-- main  -->
-    <main class="bg-[#F4F4F4]">
+    <main>
 
-        <!-- We design thoughtful, liveable spaces section  -->
-        <section class="w-11/12 mx-auto">
+        <!-- About us section  -->
+        <section class="bg-[#F4F4F4]">
+            <div class="w-11/12 mx-auto">
 
-            <!-- background img div  -->
-            <div>
-                <img class="-ml-12 hidden lg:flex pt-3" src="./assets/Vector.png" alt="">
-            </div>
-
-
-            <!-- contents div  -->
-
-            <div class="card lg:card-side mt-5">
-
-                <div class="space-y-7">
-
-                    <div class="text-center lg:text-start space-y-5 mt-6 lg:mt-0">
-                        <p class="font-bold text-[16px] inline px-4 py-2 bg-white rounded-3xl"> <i
-                                class="ri-arrow-right-fill"></i>About Us</p>
-                        <h2 class="font-bold text-2xl md:text-3xl lg:text-4xl">We design thoughtful,<br> liveable spaces
-                        </h2>
-                        <p class="text-[14px] md:text-[16px] font-medium w-2/3 mx-auto lg:mx-0">The barn house
-                            captivates
-                            with
-                            its blend
-                            of
-                            rustic
-                            charm and
-                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
-                    </div>
+                <!-- background img div  -->
+                <div>
+                    <img class="-ml-12 hidden lg:flex pt-3" src="./assets/Vector.png" alt="">
+                </div>
 
 
+                <!-- contents div  -->
 
-                    <div class="md:flex lg:flex-col gap-5 space-y-5 md:space-y-0">
+                <div class="card lg:card-side mt-5">
 
-                        <!-- one -->
-                        <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 lg:justify-center lg:items-center gap-2 ">
-                            <div>
-                                <img src="./assets/commercial.png" alt="">
-                            </div>
+                    <div class="space-y-7">
 
-                            <div>
-                                <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
-                                <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic
-                                    charm and modern.</p>
-                            </div>
-                        </div>
-
-                        <!-- two -->
-                        <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 mt-10 lg:items-center lg:justify-center gap-2 ">
-                            <div>
-                                <img src="./assets/residential.png" alt="">
-                            </div>
-
-                            <div>
-                                <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
-                                <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic
-                                    charm and modern.</p>
-                            </div>
+                        <div class="text-center lg:text-start space-y-5 mt-6 lg:mt-0">
+                            <p class="font-bold text-[16px] inline px-4 py-2 bg-white rounded-3xl"> <i
+                                    class="ri-arrow-right-fill"></i>About Us</p>
+                            <h2 class="font-bold text-2xl md:text-3xl lg:text-4xl">We design thoughtful,<br> liveable
+                                spaces
+                            </h2>
+                            <p class="text-[14px] md:text-[16px] font-medium w-2/3 mx-auto lg:mx-0">The barn house
+                                captivates
+                                with
+                                its blend
+                                of
+                                rustic
+                                charm and
+                                modern sophistication, featuring weathered wood, sleek metal accents.</p>
                         </div>
 
 
 
+                        <div class="md:flex lg:flex-col gap-5 space-y-5 md:space-y-0">
+
+                            <!-- one -->
+                            <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 lg:justify-center lg:items-center gap-2 ">
+                                <div>
+                                    <img src="./assets/commercial.png" alt="">
+                                </div>
+
+                                <div>
+                                    <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
+                                    <p class="text-[16px] font-medium">The barn house captivates with its blend of
+                                        rustic
+                                        charm and modern.</p>
+                                </div>
+                            </div>
+
+                            <!-- two -->
+                            <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 mt-10 lg:items-center lg:justify-center gap-2 ">
+                                <div>
+                                    <img src="./assets/residential.png" alt="">
+                                </div>
+
+                                <div>
+                                    <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
+                                    <p class="text-[16px] font-medium">The barn house captivates with its blend of
+                                        rustic
+                                        charm and modern.</p>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
 
                     </div>
+                    <figure
+                        class="mt-5 lg:mt-0 xl:mb-16 xl:h-[504px] rounded-2xl xl:w-[573px] h-56 md:h-96 object-cover object-center ">
+                        <img class="xl:h-full w-full rounded-2xl xl:w-full" src="./assets/Rectangle.png" alt="Album" />
+                    </figure>
+
+
 
                 </div>
-                <figure
-                    class="mt-5 lg:mt-0 xl:mb-16 xl:h-[504px] rounded-2xl xl:w-[573px] h-56 md:h-96 object-cover object-center ">
-                    <img class="xl:h-full w-full rounded-2xl xl:w-full" src="./assets/Rectangle.png" alt="Album" />
-                </figure>
 
 
+
+
+
+
+
+
+
+
+            </div>
+        </section>
+
+
+
+
+        <!-- How we works section -->
+        <section class="bg-[#F4F4F4] h-[100rem] pt-16">
+            <div class="w-11/12 mx-auto">
+
+                <div class="space-y-4 text-center">
+                    <p class="font-bold text-[16px] inline px-4 py-2 bg-white rounded-3xl"> <i
+                            class="ri-arrow-right-fill"></i>How we works</p>
+                    <h2 class="font-bold text-4xl">Our Works Process</h2>
+                    <p class="text-[16px] font-medium lg:w-1/2 mx-auto">The barn house captivates with its blend of
+                        rustic charm
+                        and
+                        modern
+                        sophistication featuring
+                        weathered wood, sleek metal accents.</p>
+                </div>
+
+
+                <!-- container div -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mt-5">
+                    <!-- card one  -->
+                    <div class="bg-[#E7C1D3] p-6 space-y-2 rounded-2xl">
+
+                        <div>
+                            <img src="./assets/concept.png" alt="">
+                        </div>
+
+                        <h2 class="font-extrabold text-xl">Concept</h2>
+                        <p class="font-medium text-[16px]">The barn house captivates with its blend of rustic charm and
+                            modern.</p>
+
+
+
+
+                    </div>
+
+                    <!-- card two  -->
+                    <div class="bg-[#EFDA6E] p-6 space-y-2 rounded-2xl">
+
+                        <div>
+                            <img src="./assets/flow-chart.png" alt="">
+                        </div>
+
+                        <h2 class="font-extrabold text-xl">Design Process</h2>
+                        <p class="font-medium text-[16px]">The barn house captivates with its blend of rustic charm and
+                            modern.</p>
+
+
+
+
+                    </div>
+
+
+                    <!-- card three  -->
+                    <div class="bg-[#A4DAC3] p-6 space-y-2 rounded-2xl">
+
+                        <div>
+                            <img src="./assets/vision.png" alt="">
+                        </div>
+
+                        <h2 class="font-extrabold text-xl">Supervision</h2>
+                        <p class="font-medium text-[16px]">The barn house captivates with its blend of rustic charm and
+                            modern.</p>
+
+
+
+
+                    </div>
+
+
+                    <!-- card four  -->
+                    <div class="bg-[#77AAEA] p-6 space-y-2 rounded-2xl">
+
+                        <div>
+                            <img src="./assets/budget-planning.png" alt="">
+                        </div>
+
+                        <h2 class="font-extrabold text-xl">Budget Planning</h2>
+                        <p class="font-medium text-[16px]">The barn house captivates with its blend of rustic charm and
+                            modern.</p>
+
+
+
+
+                    </div>
+
+
+
+
+
+
+                </div>
 
             </div>
-
-
-
-
-
-
-
 
 
 
         </section>
+
+
+
 
     </main>
 
