Explore our Latest works section added

--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
 
 </head>
 
-<body class="manrope h-[100rem]">
+<body class="manrope h-[200rem]">
 
     <!-- header  -->
-    <header class="w-11/12 mx-auto">
+
+    <header class="w-11/12 mx-auto ">
 
         <!--navbar  -->
 
         <nav class="pt-2">
 
-            <div class="navbar bg-base-100">
+            <div class="navbar">
                 <div class="navbar-start space-x-2">
 
                     <div class="">
@@ -85,7 +86,8 @@
 
 
                         <div class="flex justify-center items-center gap-1 xl:gap-4">
-                            <div> <i class="ri-search-line bg-[#FFFFFF] border-2 text-xl p-3  rounded-full"></i></div>
+                            <div> <i class="ri-search-line bg-[#FFFFFF] border-2 text-xl p-3  rounded-full"></i>
+                            </div>
 
                             <div> <i class="ri-shopping-cart-2-line bg-[#FFFFFF] border-2 text-xl p-3 rounded-full"></i>
                             </div>
@@ -150,13 +152,15 @@
                     of this
                     design
                     has a striking appearance</h1>
-                <p class="text-[14px] md:text-[16px] font-medium mx-auto md:w-8/12">The barn house captivates with its
+                <p class="text-[14px] md:text-[16px] font-medium mx-auto md:w-8/12">The barn house captivates with
+                    its
                     blend of
                     rustic
                     charm and
                     modern
                     sophistication, featuring
-                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+                </p>
                 <button
                     class="btn btn-active font-bold text-xl w-full md:w-[250px] rounded-3xl bg-[#ABEF5F80] text-xl font-extrabold">View
                     Details
@@ -286,9 +290,8 @@
 
 
 
-
         <!-- How we works section -->
-        <section class="bg-[#F4F4F4] h-[100rem] pt-16">
+        <section class="bg-[#F4F4F4]  py-16">
             <div class="w-11/12 mx-auto">
 
                 <div class="space-y-4 text-center">
@@ -380,6 +383,114 @@
                 </div>
 
             </div>
+
+
+
+        </section>
+
+
+
+        <!-- Explore our Latest works section  -->
+
+        <section class=" w-11/12 mx-auto">
+
+
+            <div class="space-y-4 text-center mt-10 md:mt-16">
+                <p class="font-bold text-[16px] inline px-4 py-2 bg-[#ABEF5F33] rounded-3xl"> <i
+                        class="ri-arrow-right-fill"></i>Explore our Latest works</p>
+                <h2 class="font-bold text-4xl">Our Latest Portfolio</h2>
+                <p class="text-[16px] font-medium lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic
+                    charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+
+
+
+
+
+
+            <div class="grid  lg:grid-cols-12 gap-3 mt-10 shadow-md lg:shadow-none">
+
+                <!-- one  -->
+
+                <div class=" border-2 rounded-2xl col-span-12 lg:col-span-8">
+
+                    <div class="sm:flex p-4 px-6 gap-5">
+                        <div>
+                            <img class="h-52 w-[500px]" src="./assets/img1.png" alt="">
+                        </div>
+
+                        <div class="sm:space-y-5 space-y-3">
+                            <h2 class="text-2xl font-extrabold pt-2">Commercial</h2>
+                            <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic charm
+
+                                captivates with its blend of rustic charm and modern .</p>
+                            <button class="font-extrabold text-xl">View Details <i
+                                    class="ri-arrow-right-up-line bg-prime rounded-full p-1 text-[18px]"></i></button>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+
+
+                <!-- two  -->
+                <div class="  border-2 rounded-2xl col-span-12 sm:col-span-6 lg:col-span-4 ">
+                    <div class="p-4">
+                        <img class="h-52  mx-auto object-contain" src="./assets/img2.png" alt="">
+                    </div>
+                </div>
+
+
+
+                <!-- three  -->
+                <div class=" order-9 lg:order-none border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 ">
+                    <div class="p-4"> <img class="h-52 w-[500px] mx-auto object-contain" src="./assets/img3.png" alt="">
+                    </div>
+                </div>
+
+
+                <!-- four  -->
+                <div class="order-8 lg:order-none border-2 rounded-2xl  col-span-12 lg:col-span-6 ">
+
+                    <div class="sm:flex p-4 px-6 gap-4">
+                        <div>
+                            <img class="h-52 w-[500px]" src="./assets/img4.png" alt="">
+                        </div>
+
+                        <div class=" sm:space-y-5 space-y-3">
+                            <h2 class="text-2xl font-extrabold pt-2">Commercial</h2>
+                            <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic charm
+                                and modern. The barn house
+                                captivates with its blend of rustic charm and modern .</p>
+                            <button class="font-extrabold text-xl">View Details <i
+                                    class="ri-arrow-right-up-line bg-prime rounded-full p-1 text-[18px]"></i></button>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <!-- five  -->
+                <div class=" border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 ">
+                    <div class="p-4"> <img class="h-52 w-[500px] object-contain mx-auto" src="./assets/img5.png" alt="">
+                    </div>
+                </div>
+
+                <!-- six  -->
+                <div
+                    class="order-10 lg:order-none border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 lg:hidden ">
+                    <div class="p-4"> <img class="object-contain mx-auto h-52 w-[500px]" src="./assets/img5.png" alt="">
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+
 
 
 
