grid layout changes

--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
 
                 <div class=" border-2 rounded-2xl col-span-12 lg:col-span-8">
 
-                    <div class="sm:flex p-4 px-6 gap-5">
+                    <div class="grid grid-cols-1 sm:grid-cols-3 p-4 px-6 gap-5">
                         <div>
-                            <img class="h-52 w-[500px]" src="./assets/img1.png" alt="">
+                            <img class="h-52 w-full sm:w-auto" src="./assets/img1.png" alt="">
                         </div>
 
-                        <div class="sm:space-y-5 space-y-3">
-                            <h2 class="text-2xl font-extrabold pt-2">Commercial</h2>
+                        <div class="sm:space-y-5 space-y-3 sm:col-span-2 ">
+                            <h2 class="text-2xl font-extrabold">Commercial</h2>
                             <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic charm
 
                                 captivates with its blend of rustic charm and modern .</p>
@@ -438,7 +438,7 @@
                 <!-- two  -->
                 <div class="  border-2 rounded-2xl col-span-12 sm:col-span-6 lg:col-span-4 ">
                     <div class="p-4">
-                        <img class="h-52  mx-auto object-contain" src="./assets/img2.png" alt="">
+                        <img class="h-52  mx-auto w-full sm:w-auto" src="./assets/img2.png" alt="">
                     </div>
                 </div>
 
@@ -446,7 +446,7 @@
 
                 <!-- three  -->
                 <div class=" order-9 lg:order-none border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 ">
-                    <div class="p-4"> <img class="h-52 w-[500px] mx-auto object-contain" src="./assets/img3.png" alt="">
+                    <div class="p-4"> <img class="h-52 w-full sm:w-auto mx-auto " src="./assets/img3.png" alt="">
                     </div>
                 </div>
 
@@ -454,15 +454,16 @@
                 <!-- four  -->
                 <div class="order-8 lg:order-none border-2 rounded-2xl  col-span-12 lg:col-span-6 ">
 
-                    <div class="sm:flex p-4 px-6 gap-4">
+                    <div class="grid p-4 px-6 gap-5 sm:grid-cols-2">
                         <div>
-                            <img class="h-52 w-[500px]" src="./assets/img4.png" alt="">
+                            <img class="h-52 w-full sm:w-auto " src="./assets/img4.png" alt="">
                         </div>
 
-                        <div class=" sm:space-y-5 space-y-3">
-                            <h2 class="text-2xl font-extrabold pt-2">Commercial</h2>
-                            <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic charm
-                                and modern. The barn house
+                        <div class=" sm:space-y-3 space-y-3">
+                            <h2 class="text-2xl font-extrabold">Commercial</h2>
+                            <p class="text-[16px] font-medium">The barn house captivates with its blend of
+
+
                                 captivates with its blend of rustic charm and modern .</p>
                             <button class="font-extrabold text-xl">View Details <i
                                     class="ri-arrow-right-up-line bg-prime rounded-full p-1 text-[18px]"></i></button>
@@ -474,14 +475,14 @@
 
                 <!-- five  -->
                 <div class=" border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 ">
-                    <div class="p-4"> <img class="h-52 w-[500px] object-contain mx-auto" src="./assets/img5.png" alt="">
+                    <div class="p-4"> <img class="h-52 w-full sm:w-auto mx-auto" src="./assets/img5.png" alt="">
                     </div>
                 </div>
 
                 <!-- six  -->
                 <div
                     class="order-10 lg:order-none border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 lg:hidden ">
-                    <div class="p-4"> <img class="object-contain mx-auto h-52 w-[500px]" src="./assets/img5.png" alt="">
+                    <div class="p-4"> <img class=" mx-auto h-52 w-full sm:w-auto" src="./assets/img5.png" alt="">
                     </div>
                 </div>
 
