--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
                     <div class="grid grid-cols-1 sm:grid-cols-3 p-4 px-6 gap-5">
                         <div>
-                            <img class="h-52 w-full sm:w-auto" src="./assets/img1.png" alt="">
+                            <img class="h-52 w-full sm:w-auto object-cover rounded-2xl " src="./assets/img1.png" alt="">
                         </div>
 
                         <div class="sm:space-y-5 space-y-3 sm:col-span-2 ">
@@ -438,7 +438,8 @@
                 <!-- two  -->
                 <div class="  border-2 rounded-2xl col-span-12 sm:col-span-6 lg:col-span-4 ">
                     <div class="p-4">
-                        <img class="h-52  mx-auto w-full sm:w-auto" src="./assets/img2.png" alt="">
+                        <img class="h-52  mx-auto w-full sm:w-auto object-cover rounded-2xl " src="./assets/img2.png"
+                            alt="">
                     </div>
                 </div>
 
@@ -446,7 +447,8 @@
 
                 <!-- three  -->
                 <div class=" order-9 lg:order-none border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 ">
-                    <div class="p-4"> <img class="h-52 w-full sm:w-auto mx-auto " src="./assets/img3.png" alt="">
+                    <div class="p-4"> <img class="h-52 w-full sm:w-auto mx-auto object-cover rounded-2xl  "
+                            src="./assets/img3.png" alt="">
                     </div>
                 </div>
 
@@ -456,7 +458,7 @@
 
                     <div class="grid p-4 px-6 gap-5 sm:grid-cols-2">
                         <div>
-                            <img class="h-52 w-full sm:w-auto " src="./assets/img4.png" alt="">
+                            <img class="h-52 w-full sm:w-auto object-cover rounded-2xl " src="./assets/img4.png" alt="">
                         </div>
 
                         <div class=" sm:space-y-3 space-y-3">
@@ -475,14 +477,16 @@
 
                 <!-- five  -->
                 <div class=" border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 ">
-                    <div class="p-4"> <img class="h-52 w-full sm:w-auto mx-auto" src="./assets/img5.png" alt="">
+                    <div class="p-4"> <img class="h-52 w-full sm:w-auto mx-auto object-cover rounded-2xl "
+                            src="./assets/img5.png" alt="">
                     </div>
                 </div>
 
                 <!-- six  -->
                 <div
                     class="order-10 lg:order-none border-2 rounded-2xl  col-span-12 sm:col-span-6 lg:col-span-3 lg:hidden ">
-                    <div class="p-4"> <img class=" mx-auto h-52 w-full sm:w-auto" src="./assets/img5.png" alt="">
+                    <div class="p-4"> <img class=" mx-auto h-52 w-full object-cover rounded-2xl sm:w-auto"
+                            src="./assets/img5.png" alt="">
                     </div>
                 </div>
 
