contact section added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             font-family: "Manrope", sans-serif;
 
         }
+
+        .bg-img {
+            background-image: url(./assets/bg.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     </style>
 
     <!-- scripts -->
@@ -500,6 +506,91 @@
 
 
         </section>
+
+
+
+        <!-- Let’s Discuss Next Project seciton -->
+
+        <section class="bg-img">
+            <div class="w-11/12 mx-auto pb-10">
+
+                <!-- titel div  -->
+                <div class="space-y-6 text-center mt-10 md:mt-16 pt-16">
+                    <p class="font-bold text-[16px] inline px-4 py-2 bg-[#ABEF5F33] rounded-3xl"> <i
+                            class="ri-arrow-right-fill"></i>Let’s Connect</p>
+                    <h2 class="font-bold text-4xl">Let’s Discuss Next Project</h2>
+                    <p class="text-[16px] font-medium lg:w-1/2 mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+
+
+
+                <!-- box div  -->
+
+                <div class="space-y-4 mt-6 md:mt-10 ">
+
+                    <div class="md:flex justify-center md:gap-4 space-y-4 md:space-y-0">
+
+                        <div>
+                            <input type="text" placeholder="First Name"
+                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                        </div>
+
+
+                        <div>
+                            <input type="text" placeholder="Last Name"
+                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                        </div>
+
+
+
+                    </div>
+
+
+                    <div class="md:flex justify-center md:gap-4 space-y-4 md:space-y-0">
+
+                        <div>
+                            <input type="text" placeholder="Phone Number"
+                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                        </div>
+
+
+                        <div>
+                            <input type="text" placeholder="Emain Address"
+                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                        </div>
+
+
+
+                    </div>
+
+                    <div class="flex flex-col items-center space-y-4">
+                        <textarea placeholder="Write your message here"
+                            class="textarea textarea-bordered w-full max-h-60 min-h-60 max-w-[950px]"></textarea>
+
+
+
+                        <button
+                            class="btn btn-active text-xl w-full lg:max-w-[950px] rounded-3xl bg-[#ABEF5F] text-xl font-extrabold">Send
+                            Mail
+
+                            <div>
+                                <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
+                            </div>
+
+                        </button>
+
+
+                    </div>
+
+
+                </div>
+
+
+            </div>
+        </section>
+
+
 
 
 
