--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 <body class="manrope h-[200rem]">
 
     <!-- header  -->
-
     <header class="w-11/12 mx-auto ">
 
         <!--navbar  -->
@@ -533,13 +532,13 @@
 
                         <div>
                             <input type="text" placeholder="First Name"
-                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                                class="input bg-[#FFFFFF] input-ghost w-full rounded-[60px]  md:pr-64 " />
                         </div>
 
 
                         <div>
                             <input type="text" placeholder="Last Name"
-                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                                class="input bg-[#FFFFFF] rounded-[60px] input-ghost w-full  md:pr-64 " />
                         </div>
 
 
@@ -551,13 +550,13 @@
 
                         <div>
                             <input type="text" placeholder="Phone Number"
-                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                                class="input bg-[#FFFFFF] input-ghost w-full rounded-[60px]  md:pr-64 " />
                         </div>
 
 
                         <div>
                             <input type="text" placeholder="Emain Address"
-                                class="input bg-[#FFFFFF] input-ghost w-full  md:pr-64 " />
+                                class="input bg-[#FFFFFF] input-ghost w-full rounded-[60px]  md:pr-64 " />
                         </div>
 
 
@@ -566,7 +565,7 @@
 
                     <div class="flex flex-col items-center space-y-4">
                         <textarea placeholder="Write your message here"
-                            class="textarea textarea-bordered w-full max-h-60 min-h-60 max-w-[950px]"></textarea>
+                            class="textarea textarea-bordered w-full rounded-3xl max-h-60 min-h-60 max-w-[950px]"></textarea>
 
 
 
@@ -596,6 +595,64 @@
 
 
     </main>
+
+    <!-- footer  -->
+
+
+    <footer class="text-center py-16 bg-black space-y-6">
+
+        <div class="flex gap-1 justify-center items-center">
+
+            <div class="">
+                <i class="ri-arrow-right-up-line bg-prime rounded-full p-2 text-xl"></i>
+            </div>
+            <a class="text-4xl font-extrabold text-[#E9E9E9]">Rinterio</a>
+
+        </div>
+
+
+        <div>
+            <p class="text-[16px] font-medium md:w-2/4 mx-auto  text-[#737373]">The barn house captivates with its blend
+                of
+                rustic
+                charm
+                and
+                modern
+                sophistication, featuring weathered
+                wood, sleek metal accents.</p>
+        </div>
+
+        <div>
+
+            <ul class="sm:flex gap-10 justify-center space-y-6 sm:space-y-0">
+                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Home</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Services</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Portfolio</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Blogs</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Contact Us</a></li>
+            </ul>
+
+        </div>
+
+        <div>
+            <button class="btn btn-active rounded-3xl bg-prime text-xl font-extrabold">Book Consult
+
+                <div>
+                    <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
+                </div>
+
+            </button>
+        </div>
+
+
+
+
+
+
+    </footer>
+
+
+
 
 
 
