special section added

--- a/index.html
+++ b/index.html
@@ -492,6 +492,149 @@
 
 
 
+
+        <!--! Special Section  -->
+
+        <section class="w-11/12 mx-auto mt-16 bg-slate-50 p-3 pb-16 space-y-6">
+
+
+
+            <!-- top  -->
+            <div class="space-y-4 text-center mt-10 md:mt-16">
+                <p class="font-bold text-[16px] inline px-4 py-2 bg-[#ABEF5F33] rounded-3xl"> <i
+                        class="ri-arrow-right-fill"></i>Explore our Latest works</p>
+                <h2 class="font-bold text-4xl">Our Latest Portfolio</h2>
+                <p class="text-[16px] font-medium lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic
+                    charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+
+
+            <!-- one  -->
+
+            <div class="grid grid-cols-1  lg:gap-3  lg:grid-cols-2">
+                <div>
+                    <img class="rounded-2xl" src="./assets/img1.jpg" alt="">
+                </div>
+
+
+
+                <!-- content -->
+                <div class="space-y-5 pt-3">
+                    <h1 class="sm:text-4xl lg:text-5xl text-3xl  font-bold">We Specilize in Quality Revolations</h1>
+                    <p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati
+                        Magni aspernatur fugit provident praesentium assumenda, adipisci quisquam!</p>
+
+
+
+                    <!-- svg   -->
+                    <div class="grid grid-cols-1 sm:grid-cols-2 space-y-2 ">
+
+                        <div class="space-y-2">
+
+                            <!-- one -->
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="font-bold text-xl">Smart farm</p>
+                            </div>
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="text-xl font-bold">Exceptional lifestyle</p>
+                            </div>
+
+
+                        </div>
+
+
+                        <div class="space-y-3">
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="text-xl font-bold">Beautiful Scene</p>
+                            </div>
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="text-xl font-bold">Complete Security</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+
+
+
+                </div>
+            </div>
+
+
+
+            <!-- two  -->
+
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+
+                <!-- content -->
+                <div class="space-y-5 pt-4 order-2 lg:order-none">
+                    <h1 class="sm:text-4xl lg:text-5xl text-3xl  font-bold">We are experts in historic home renovations
+                    </h1>
+                    <p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati
+                        Magni aspernatur fugit provident praesentium assumenda, adipisci quisquam!</p>
+
+
+
+                    <!-- svg   -->
+                    <div class="grid grid-cols-1 sm:grid-cols-2 space-y-2 ">
+
+                        <div class="space-y-2">
+
+                            <!-- one -->
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="font-bold text-xl">Smart farm</p>
+                            </div>
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="text-xl font-bold">Exceptional lifestyle</p>
+                            </div>
+
+
+                        </div>
+
+
+                        <div class="space-y-2">
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="text-xl font-bold">Beautiful Scene</p>
+                            </div>
+                            <div class="flex gap-2 items-center">
+                                <p> <img src="./assets/check-mark-button-svgrepo-com.svg" class="h-5 w-5" alt=""></p>
+                                <p class="text-xl font-bold">Complete Security</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+
+
+
+                </div>
+
+                <!-- image  -->
+                <div class="grid lg:justify-items-end">
+                    <img class="rounded-2xl" src="./assets/img2.jpg" alt="">
+                </div>
+
+
+
+            </div>
+
+
+
+        </section>
+
+
+
         <!-- Let’s Discuss Next Project seciton -->
 
         <section class="bg-bgImg bg-no-repeat bg-cover">
