--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             theme: {
                 extend: {
                     backgroundImage: {
-                        'bgImg': "url('./assets/bg.jpg')",
+                        'bgImg': "url('assets/bg.jpg')",
                     },
                     colors: {
                         prime: '#ABEF5F',
@@ -54,9 +54,10 @@
                 <div class="navbar-start space-x-2">
 
                     <div class="">
-                        <i class="ri-arrow-right-up-line bg-prime rounded-full p-2 text-xl"></i>
+                        <i class="ri-arrow-right-up-line cursor-pointer bg-prime rounded-full p-2 text-xl"></i>
                     </div>
-                    <a class="text-4xl font-extrabold">Rinterio</a>
+                    <a
+                        class="text-4xl font-extrabold hover:[scale:1.1] cursor-pointer duration-500 ease-in-out">Rinterio</a>
 
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -75,16 +76,19 @@
 
 
                         <div class="flex justify-center items-center gap-1 xl:gap-4">
-                            <div> <i class="ri-search-line bg-[#FFFFFF] border-2 text-xl p-3  rounded-full"></i>
+                            <div> <i
+                                    class="ri-search-line bg-[#FFFFFF] cursor-pointer border-2 text-xl p-3  rounded-full"></i>
                             </div>
 
-                            <div> <i class="ri-shopping-cart-2-line bg-[#FFFFFF] border-2 text-xl p-3 rounded-full"></i>
+                            <div> <i
+                                    class="ri-shopping-cart-2-line cursor-pointer bg-[#FFFFFF] border-2 text-xl p-3 rounded-full"></i>
                             </div>
 
                         </div>
 
 
-                        <button class="btn btn-active rounded-3xl bg-prime text-xl font-extrabold">Book Consult
+                        <button class="btn btn-active hover:bg-prime rounded-3xl bg-prime text-xl font-extrabold">Book
+                            Consult
 
                             <div>
                                 <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
@@ -151,7 +155,7 @@
                     weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                 </p>
                 <button
-                    class="btn btn-active font-bold text-xl w-full md:w-[250px] rounded-3xl bg-[#ABEF5F80] text-xl font-extrabold">View
+                    class="btn btn-active hover:bg-prime font-bold text-xl w-full md:w-[250px] rounded-3xl bg-[#ABEF5F80] text-xl font-extrabold">View
                     Details
 
                     <div>
@@ -223,7 +227,8 @@
                         <div class="md:flex lg:flex-col gap-5 space-y-5 md:space-y-0">
 
                             <!-- one -->
-                            <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 lg:justify-center lg:items-center gap-2 ">
+                            <div
+                                class="flex bg-[#FFFFFF] md:w-2/3 p-5 rounded-xl lg:justify-center lg:items-center gap-2 ">
                                 <div>
                                     <img src="./assets/commercial.png" alt="">
                                 </div>
@@ -237,13 +242,14 @@
                             </div>
 
                             <!-- two -->
-                            <div class="flex bg-[#FFFFFF] md:w-2/3 p-5 mt-10 lg:items-center lg:justify-center gap-2 ">
+                            <div
+                                class="flex bg-[#FFFFFF] rounded-xl md:w-2/3 p-5 mt-10 lg:items-center lg:justify-center gap-2 ">
                                 <div>
                                     <img src="./assets/residential.png" alt="">
                                 </div>
 
                                 <div>
-                                    <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Commercial</h1>
+                                    <h1 class="text-[16px] md:text-[18px] lg:text-xl font-extrabold">Residential</h1>
                                     <p class="text-[16px] font-medium">The barn house captivates with its blend of
                                         rustic
                                         charm and modern.</p>
@@ -299,7 +305,7 @@
                 <!-- container div -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mt-5">
                     <!-- card one  -->
-                    <div class="bg-[#E7C1D3] p-6 space-y-2 rounded-2xl">
+                    <div class="bg-[#E7C1D3] p-6 space-y-2 rounded-2xl hover:[scale:1.05] duration-300 ease-in-out ">
 
                         <div>
                             <img src="./assets/concept.png" alt="">
@@ -315,7 +321,7 @@
                     </div>
 
                     <!-- card two  -->
-                    <div class="bg-[#EFDA6E] p-6 space-y-2 rounded-2xl">
+                    <div class="bg-[#EFDA6E] p-6 space-y-2 rounded-2xl hover:[scale:1.05] duration-300 ease-in-out">
 
                         <div>
                             <img src="./assets/flow-chart.png" alt="">
@@ -332,7 +338,7 @@
 
 
                     <!-- card three  -->
-                    <div class="bg-[#A4DAC3] p-6 space-y-2 rounded-2xl">
+                    <div class="bg-[#A4DAC3] p-6 space-y-2 rounded-2xl hover:[scale:1.05] duration-300 ease-in-out">
 
                         <div>
                             <img src="./assets/vision.png" alt="">
@@ -349,7 +355,7 @@
 
 
                     <!-- card four  -->
-                    <div class="bg-[#77AAEA] p-6 space-y-2 rounded-2xl">
+                    <div class="bg-[#77AAEA] p-6 space-y-2 rounded-2xl hover:[scale:1.05] duration-300 ease-in-out">
 
                         <div>
                             <img src="./assets/budget-planning.png" alt="">
@@ -413,7 +419,8 @@
                             <p class="text-[16px] font-medium">The barn house captivates with its blend of rustic charm
 
                                 captivates with its blend of rustic charm and modern .</p>
-                            <button class="font-extrabold text-xl">View Details <i
+                            <button class="font-extrabold text-xl hover:[scale:1.05] duration-300 ease-in-out">View
+                                Details <i
                                     class="ri-arrow-right-up-line bg-prime rounded-full p-1 text-[18px]"></i></button>
                         </div>
                     </div>
@@ -456,7 +463,8 @@
 
 
                                 captivates with its blend of rustic charm and modern .</p>
-                            <button class="font-extrabold text-xl">View Details <i
+                            <button class="font-extrabold text-xl hover:[scale:1.05] duration-300 ease-in-out">View
+                                Details <i
                                     class="ri-arrow-right-up-line bg-prime rounded-full p-1 text-[18px]"></i></button>
                         </div>
 
@@ -494,7 +502,6 @@
 
 
         <!--! Special Section  -->
-
         <section class="w-11/12 mx-auto mt-16 bg-slate-50 p-3 pb-16 space-y-6">
 
 
@@ -502,8 +509,8 @@
             <!-- top  -->
             <div class="space-y-4 text-center mt-10 md:mt-16">
                 <p class="font-bold text-[16px] inline px-4 py-2 bg-[#ABEF5F33] rounded-3xl"> <i
-                        class="ri-arrow-right-fill"></i>Explore our Latest works</p>
-                <h2 class="font-bold text-4xl">Our Latest Portfolio</h2>
+                        class="ri-arrow-right-fill"></i>Quality Revolations</p>
+                <h2 class="font-bold text-4xl">Specilize in Quality Revolations</h2>
                 <p class="text-[16px] font-medium lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic
                     charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
@@ -511,7 +518,7 @@
 
             <!-- one  -->
 
-            <div class="grid grid-cols-1  lg:gap-3  lg:grid-cols-2">
+            <div class="grid grid-cols-1  lg:gap-3  lg:grid-cols-2 border-2 shadow-sm p-4 rounded-xl">
                 <div>
                     <img class="rounded-2xl" src="./assets/img1.jpg" alt="">
                 </div>
@@ -521,8 +528,8 @@
                 <!-- content -->
                 <div class="space-y-5 pt-3">
                     <h1 class="sm:text-4xl lg:text-5xl text-3xl  font-bold">We Specilize in Quality Revolations</h1>
-                    <p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati
-                        Magni aspernatur fugit provident praesentium assumenda, adipisci quisquam!</p>
+                    <p class="font-medium">The barn house captivates with its blend of rustic charm and modern
+                        sophistication, featuring weathered wood, sleek metal accents.</p>
 
 
 
@@ -570,14 +577,14 @@
 
             <!-- two  -->
 
-            <div class="grid grid-cols-1 lg:grid-cols-2">
+            <div class="grid grid-cols-1 lg:grid-cols-2 border-2 p-4 shadow-sm rounded-xl">
 
                 <!-- content -->
                 <div class="space-y-5 pt-4 order-2 lg:order-none">
                     <h1 class="sm:text-4xl lg:text-5xl text-3xl  font-bold">We are experts in historic home renovations
                     </h1>
-                    <p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati
-                        Magni aspernatur fugit provident praesentium assumenda, adipisci quisquam!</p>
+                    <p class="font-medium">The barn house captivates with its blend of rustic charm and modern
+                        sophistication, featuring weathered wood, sleek metal accents.</p>
 
 
 
@@ -697,7 +704,7 @@
 
 
                         <button
-                            class="btn btn-active text-xl w-full lg:max-w-[950px] rounded-3xl bg-[#ABEF5F] text-xl font-extrabold">Send
+                            class="btn btn-active text-xl w-full lg:max-w-[950px] rounded-3xl hover:bg-prime bg-[#ABEF5F] text-xl font-extrabold">Send
                             Mail
 
                             <div>
@@ -731,7 +738,7 @@
             <div class="">
                 <i class="ri-arrow-right-up-line bg-prime rounded-full p-2 text-xl"></i>
             </div>
-            <a class="text-4xl font-extrabold text-[#E9E9E9]">Rinterio</a>
+            <a class="text-4xl font-extrabold text-[#E9E9E9] hover:[scale:1.05] cursor-pointer">Rinterio</a>
 
         </div>
 
@@ -750,17 +757,22 @@
         <div>
 
             <ul class="sm:flex gap-10 justify-center space-y-6 sm:space-y-0">
-                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Home</a></li>
-                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Services</a></li>
-                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Portfolio</a></li>
-                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Blogs</a></li>
-                <li class="text-[16px] text-[#E9E9E9] font-normal"><a href="">Contact Us</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal hover:font-bold "><a href="">Home</a>
+                </li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal hover:font-bold "><a href="">Services</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal hover:font-bold "><a href="">Portfolio</a></li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal hover:font-bold "><a href="">Blogs</a>
+                </li>
+                <li class="text-[16px] text-[#E9E9E9] font-normal hover:font-bold "><a href="">Contact
+                        Us</a></li>
             </ul>
 
         </div>
 
         <div>
-            <button class="btn btn-active rounded-3xl bg-prime w-full sm:w-auto text-xl font-extrabold">Book Consult
+            <button
+                class="btn btn-active hover:bg-prime rounded-3xl bg-prime w-full sm:w-auto text-xl font-extrabold">Book
+                Consult
 
                 <div>
                     <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
