linear gradient added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rinterio</title>
 
-    <!-- Rimix Icon CND  -->
+    <!-- Remix Icon CND  -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 
     <!-- DaisyUi and Tailwind CND  -->
@@ -44,147 +44,150 @@
 <body class="font-manrope h-[200rem]">
 
     <!-- header  -->
-    <header class="w-11/12 mx-auto ">
+    <header class="bg-gradient-to-t from-white to-slate-50">
+        <div class="w-11/12 mx-auto ">
 
-        <!--navbar  -->
+            <!--navbar  -->
 
-        <nav class="pt-2">
+            <nav class="pt-2">
 
-            <div class="navbar">
-                <div class="navbar-start space-x-2">
+                <div class="navbar">
+                    <div class="navbar-start space-x-2">
 
-                    <div class="">
-                        <i class="ri-arrow-right-up-line cursor-pointer bg-prime rounded-full p-2 text-xl"></i>
-                    </div>
-                    <a
-                        class="text-4xl font-extrabold hover:[scale:1.1] cursor-pointer duration-500 ease-in-out">Rinterio</a>
-
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1 text-[16px] font-normal ">
-                        <li class="hover:font-extrabold"><a>Home</a></li>
-                        <li class="hover:font-extrabold"><a>Services</a></li>
-                        <li class="hover:font-extrabold"><a>Portfolio</a></li>
-                        <li class="hover:font-extrabold"><a>Blogs</a></li>
-                        <li class="hover:font-extrabold"><a>Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="navbar-end space-x-4">
-
-
-                    <div class=" space-x-1 xl:space-x-4 hidden md:flex">
-
-
-                        <div class="flex justify-center items-center gap-1 xl:gap-4">
-                            <div> <i
-                                    class="ri-search-line bg-[#FFFFFF] cursor-pointer border-2 text-xl p-3  rounded-full"></i>
-                            </div>
-
-                            <div> <i
-                                    class="ri-shopping-cart-2-line cursor-pointer bg-[#FFFFFF] border-2 text-xl p-3 rounded-full"></i>
-                            </div>
-
+                        <div class="">
+                            <i class="ri-arrow-right-up-line cursor-pointer bg-prime rounded-full p-2 text-xl"></i>
                         </div>
-
-
-                        <button class="btn btn-active hover:bg-prime rounded-3xl bg-prime text-xl font-extrabold">Book
-                            Consult
-
-                            <div>
-                                <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
-                            </div>
-
-                        </button>
-
-
+                        <a
+                            class="text-4xl font-extrabold hover:[scale:1.1] cursor-pointer duration-500 ease-in-out">Rinterio</a>
 
                     </div>
-
-
-
-                    <!-- here  -->
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="lg:hidden">
-                            <i class="ri-menu-line text-xl border-2 p-3 rounded-full"></i>
-                        </div>
-
-                        <ul tabindex="0" class="dropdown-content bg-base-100 rounded-box z-[1] mt-3 shadow">
-                            <li><a>Home</a></li>
-                            <li><a>Services</a></li>
-                            <li><a>Portfolio</a></li>
-                            <li><a>Blogs</a></li>
-                            <li><a>Contact</a></li>
+                    <div class="navbar-center hidden lg:flex">
+                        <ul class="menu menu-horizontal px-1 text-[16px] font-normal ">
+                            <li class="hover:font-extrabold"><a>Home</a></li>
+                            <li class="hover:font-extrabold"><a>Services</a></li>
+                            <li class="hover:font-extrabold"><a>Portfolio</a></li>
+                            <li class="hover:font-extrabold"><a>Blogs</a></li>
+                            <li class="hover:font-extrabold"><a>Contact Us</a></li>
                         </ul>
                     </div>
-
-                    <!-- end  -->
-                </div>
-            </div>
-
-        </nav>
+                    <div class="navbar-end space-x-4">
 
 
-        <!-- navbar end -->
+                        <div class=" space-x-1 xl:space-x-4 hidden md:flex">
+
+
+                            <div class="flex justify-center items-center gap-1 xl:gap-4">
+                                <div> <i
+                                        class="ri-search-line bg-[#FFFFFF] cursor-pointer border-2 text-xl p-3  rounded-full"></i>
+                                </div>
+
+                                <div> <i
+                                        class="ri-shopping-cart-2-line cursor-pointer bg-[#FFFFFF] border-2 text-xl p-3 rounded-full"></i>
+                                </div>
+
+                            </div>
+
+
+                            <button
+                                class="btn btn-active hover:bg-prime rounded-3xl bg-prime text-xl font-extrabold">Book
+                                Consult
+
+                                <div>
+                                    <i class="ri-arrow-right-up-line bg-black text-white rounded-full p-2 text-xl"></i>
+                                </div>
+
+                            </button>
 
 
 
+                        </div>
 
-        <!-- banner section  -->
 
-        <section>
 
-            <!-- image div -->
-            <div>
+                        <!-- here  -->
+                        <div class="dropdown">
+                            <div tabindex="0" role="button" class="lg:hidden">
+                                <i class="ri-menu-line text-xl border-2 p-3 rounded-full"></i>
+                            </div>
 
-                <img class="mx-auto" src="./assets/banner.png" alt="">
-            </div>
-            <!-- content div -->
-            <div class="text-center space-y-5 mb-10 md:mb-16 xl:mb-24">
-                <h1 class="text-2xl md:text-4xl lg:text-6xl font-black sm:w-10/12 mx-auto">A barn
-                    house
-                    of this
-                    design
-                    has a striking appearance</h1>
-                <p class="text-[14px] md:text-[16px] font-medium mx-auto md:w-8/12">The barn house captivates with
-                    its
-                    blend of
-                    rustic
-                    charm and
-                    modern
-                    sophistication, featuring
-                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.
-                </p>
-                <button
-                    class="btn btn-active hover:bg-prime font-bold text-xl w-full md:w-[250px] rounded-3xl bg-[#ABEF5F80] text-xl font-extrabold">View
-                    Details
+                            <ul tabindex="0" class="dropdown-content bg-base-100 rounded-box z-[1] mt-3 shadow">
+                                <li><a>Home</a></li>
+                                <li><a>Services</a></li>
+                                <li><a>Portfolio</a></li>
+                                <li><a>Blogs</a></li>
+                                <li><a>Contact</a></li>
+                            </ul>
+                        </div>
 
-                    <div>
-                        <i class="ri-arrow-right-up-line bg-prime text-black rounded-full p-2 text-xl"></i>
+                        <!-- end  -->
                     </div>
+                </div>
 
-                </button>
-
-
-
+            </nav>
 
 
-            </div>
-
-
-
-        </section>
-
-        <!-- banner section end -->
+            <!-- navbar end -->
 
 
 
 
+            <!-- banner section  -->
+
+            <section>
+
+                <!-- image div -->
+                <div>
+
+                    <img class="mx-auto" src="./assets/banner.png" alt="">
+                </div>
+                <!-- content div -->
+                <div class="text-center space-y-5 mb-10 md:mb-16 xl:mb-24">
+                    <h1 class="text-2xl md:text-4xl lg:text-6xl font-black sm:w-10/12 mx-auto">A barn
+                        house
+                        of this
+                        design
+                        has a striking appearance</h1>
+                    <p class="text-[14px] md:text-[16px] font-medium mx-auto md:w-8/12">The barn house captivates with
+                        its
+                        blend of
+                        rustic
+                        charm and
+                        modern
+                        sophistication, featuring
+                        weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+                    </p>
+                    <button
+                        class="btn btn-active hover:bg-prime font-bold text-xl w-full md:w-[250px] rounded-3xl bg-[#ABEF5F80] text-xl font-extrabold">View
+                        Details
+
+                        <div>
+                            <i class="ri-arrow-right-up-line bg-prime text-black rounded-full p-2 text-xl"></i>
+                        </div>
+
+                    </button>
+
+
+
+
+
+                </div>
+
+
+
+            </section>
+
+            <!-- banner section end -->
 
 
 
 
 
 
+
+
+
+
+        </div>
     </header>
 
     <!-- main  -->
@@ -458,7 +461,7 @@
                         </div>
 
                         <div class=" sm:space-y-3 space-y-3">
-                            <h2 class="text-2xl font-extrabold">Commercial</h2>
+                            <h2 class="text-2xl font-extrabold">Residential</h2>
                             <p class="text-[16px] font-medium">The barn house captivates with its blend of
 
 
